agrega estilos a tarea 3
Agrega el archivo css a la tarea 3

--- a/Tarea 3/tarea3.html
+++ b/Tarea 3/tarea3.html
@@ -5,9 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Clase 5 - Tarea 3</title>
+        <link rel="stylesheet" href="main.css" />
     </head>
     <body>
-        <h1>Clase 5 - Tarea 3</h1>
+        <header><h1>Clase 5 - Tarea 3</h1></header>
         <div>
             <p>Ingrese la duracion de las primeras 5 clases de r/Argentina-Programa.</p>
         </div>
@@ -47,9 +48,10 @@
                 <input type="number" class="segundos" placeholder="Segundos" />
             </div>
 
-            <input type="submit" value="Calcular tiempo total" id="boton-calcular" />
-
-            <strong id="resultado"></strong>
+            <div>
+                <input type="submit" value="Calcular tiempo total" id="boton-calcular" />
+                <strong id="resultado"></strong>
+            </div>
         </form>
         <script src="tarea3.js"></script>
     </body>
