agrega estilos a tarea 4
Agrega el archivo css a la tarea 4

--- a/Tarea 4/tarea4.html
+++ b/Tarea 4/tarea4.html
@@ -5,34 +5,36 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Clase 5 - Tarea 4</title>
+        <link rel="stylesheet" href="main.css" />
     </head>
     <body>
-        <h1>Clase 5 - Tarea 4</h1>
-        <ol>
-            <li>45</li>
-            <li>86</li>
-            <li>104</li>
-            <li>21</li>
-            <li>14</li>
-            <li>67</li>
-            <li>73</li>
-            <li>21</li>
-            <li>45</li>
-            <li>21</li>
-            <li>67</li>
-            <li>21</li>
-            <li>14</li>
-            <li>25</li>
-            <li>59</li>
-            <li>21</li>
-        </ol>
+        <header><h1>Clase 5 - Tarea 4</h1></header>
+        <div>
+            <ol>
+                <li>45</li>
+                <li>86</li>
+                <li>104</li>
+                <li>21</li>
+                <li>14</li>
+                <li>67</li>
+                <li>73</li>
+                <li>21</li>
+                <li>45</li>
+                <li>21</li>
+                <li>67</li>
+                <li>21</li>
+                <li>14</li>
+                <li>25</li>
+                <li>59</li>
+                <li>21</li>
+            </ol>
+        </div>
+        <div><input type="submit" value="Calcular" id="boton-calcular" /></div>
 
-        <input type="submit" value="Calcular" id="boton-calcular" />
-
-        <div><em id="resultado-promedio"></em></div>
-        <div><em id="resultado-numero-mayor"></em></div>
-        <div><em id="resultado-numero-menor"></em></div>
-        <div><em id="resultado-numero-repetido"></em></div>
+        <div><em class="resultados" id="resultado-promedio"></em></div>
+        <div><em class="resultados" id="resultado-numero-mayor"></em></div>
+        <div><em class="resultados" id="resultado-numero-menor"></em></div>
+        <div><em class="resultados" id="resultado-numero-repetido"></em></div>
         <script src="tarea4.js"></script>
     </body>
 </html>
